--- a/ch12/CodeBreaker.Blazor.UI/CodeBreaker.Blazor.UI.csproj
+++ b/ch12/CodeBreaker.Blazor.UI/CodeBreaker.Blazor.UI.csproj
@@ -8,16 +8,16 @@
     <AssemblyName>$(MSBuildProjectName)</AssemblyName>
     <Configurations>Debug;Release;</Configurations>
     <OutputType>Library</OutputType>
+    <ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
   </PropertyGroup>
-
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="8.0.8" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="8.0.11" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.11" />
   </ItemGroup>
 
 </Project>
