--- a/ch03/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch03/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Aspire.Hosting.AppHost" />
     <PackageReference Include="Aspire.Hosting.Azure" />
     <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" />
+    <PackageReference Include="Aspire.Hosting.PostgreSQL" />
     <PackageReference Include="Aspire.Hosting.SqlServer" />
   </ItemGroup>
   <ItemGroup>
