--- a/ch10/Final/CodeBreaker.Bot.Tests/CodeBreaker.Bot.Tests.csproj
+++ b/ch10/Final/CodeBreaker.Bot.Tests/CodeBreaker.Bot.Tests.csproj
@@ -16,8 +16,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
-	</ItemGroup>
+		<Using Include="Xunit" />
+	</ItemGroup>	
 
 	<ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk"/>
